[gd_scene load_steps=13 format=3 uid="uid://doi6cqd68mpjh"]

[ext_resource type="Script" path="res://managment/storm.gd" id="1_5eyj7"]
[ext_resource type="Texture2D" uid="uid://cyutcolwkn42p" path="res://assets/Assets/smoke_07.png" id="1_umoeh"]
[ext_resource type="Texture2D" uid="uid://bd3hdh8edx00n" path="res://assets/Assets/spark_05.png" id="2_781js"]
[ext_resource type="Texture2D" uid="uid://b6lr1apmeu67a" path="res://assets/Assets/spark_01.png" id="3_4rhsx"]
[ext_resource type="Texture2D" uid="uid://c2buryiv1ibha" path="res://assets/Assets/spark_02.png" id="4_au1fl"]
[ext_resource type="AudioStream" uid="uid://cj8uhop616m8q" path="res://assets/SFX/Rain Sound.wav" id="6_004qv"]
[ext_resource type="AudioStream" uid="uid://bxrr57qlt8lnl" path="res://assets/SFX/Thunder.wav" id="7_fedf3"]

[sub_resource type="Gradient" id="Gradient_teo31"]
offsets = PackedFloat32Array(0, 0.227723, 0.762376, 1)
colors = PackedColorArray(0, 0, 0, 0.423529, 0.0980392, 0.0980392, 0.0980392, 0.85098, 0.910891, 0.910891, 0.910891, 1, 1, 1, 1, 0.517647)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_x6pcs"]
gradient = SubResource("Gradient_teo31")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_31kbl"]
emission_shape = 3
emission_box_extents = Vector3(350, 50, 1)
particle_flag_disable_z = true
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 30.0
initial_velocity_max = 30.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.5
color_ramp = SubResource("GradientTexture1D_x6pcs")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2dpig"]
emission_shape = 3
emission_box_extents = Vector3(10, 50, 1)
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.2
scale_max = 0.8
color = Color(1, 1, 0.694118, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sy1cm"]
emission_shape = 3
emission_box_extents = Vector3(350, 20, 1)
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
angle_max = 180.0
scale_min = 0.6
scale_max = 0.8
color = Color(1, 1, 0.694118, 1)

[node name="Storm" type="Node2D"]
script = ExtResource("1_5eyj7")

[node name="Cloud" type="GPUParticles2D" parent="."]
amount = 30
process_material = SubResource("ParticleProcessMaterial_31kbl")
texture = ExtResource("1_umoeh")
lifetime = 5.0

[node name="Thunder" type="GPUParticles2D" parent="."]
position = Vector2(-119, 138)
emitting = false
amount = 2
process_material = SubResource("ParticleProcessMaterial_2dpig")
texture = ExtResource("2_781js")
lifetime = 0.3
one_shot = true
explosiveness = 0.4

[node name="Thunder2" type="GPUParticles2D" parent="."]
position = Vector2(240, 154)
emitting = false
amount = 2
process_material = SubResource("ParticleProcessMaterial_2dpig")
texture = ExtResource("2_781js")
lifetime = 0.3
one_shot = true
explosiveness = 0.4

[node name="Light" type="GPUParticles2D" parent="."]
position = Vector2(245, 14)
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_sy1cm")
texture = ExtResource("3_4rhsx")
lifetime = 0.2
one_shot = true
randomness = 0.4

[node name="Light2" type="GPUParticles2D" parent="."]
position = Vector2(-183, 5)
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_sy1cm")
texture = ExtResource("4_au1fl")
lifetime = 0.2
one_shot = true
randomness = 0.4

[node name="TimerLight" type="Timer" parent="."]

[node name="TimerThunder" type="Timer" parent="."]

[node name="Rain" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_004qv")
autoplay = true

[node name="ThunderS" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_fedf3")
volume_db = -8.0

[connection signal="timeout" from="TimerLight" to="." method="_on_timer_light_timeout"]
[connection signal="timeout" from="TimerThunder" to="." method="_on_timer_thunder_timeout"]
